# can_wen

./: .dockerignore  .gitignore  AGENT.md  CLEANUP_LOG.md  RUNBOOK.md  docker-compose.dev.yml  index.html  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  admin.py  auth.py  community.py  husbandry.py  p0.py  user_settings.py
backend/app/schemas/: admin.py  auth.py  community.py  diagnosis.py  husbandry.py  knowledge.py  model_configs.py  projects.py  user_settings.py
backend/app/services/: admin_service.py  auth_service.py  community_events.py  community_service.py  diagnosis_agent_service.py  diagnosis_service.py  email_delivery.py  husbandry_service.py  knowledge_graph_service.py  llm_client.py  model_config_service.py  project_service.py  sms_delivery.py  storage_service.py  user_settings_service.py
backend/docs/: auth_schema.sql  database_schema.md  diagnosis-agent-architecture.md  p0_schema.md  schema_v1.sql
backend/docs/knowledge/: jieba_silkworm_userdict.txt  silkworm_domain_glossary.json  silkworm_domain_glossary.md
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 20260702_0001_auth_tables.py  20260702_0002_user_profile_fields.py  20260706_0003_p0_core_tables.py  (+22 more)
backend/scripts/: build_silkworm_glossary.py
backend/tests/: test_admin_api.py  test_auth_models.py  test_community_api.py  test_community_events.py  test_community_social_hub.py  test_community_v2.py  test_diagnosis_agents.py  test_diagnosis_api.py  test_email_auth.py  test_http_security.py  test_husbandry_api.py  test_knowledge_graph_api.py  test_model_config_crypto.py  test_projects_api.py
backend_mger/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend_mger/app/: __init__.py  celery_app.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py  services.py
backend_mger/docs/: knowledge-build-system.md
backend_mger/migrations/: env.py
backend_mger/scripts/: __init__.py  import_initial_knowledge.py  smoke_knowledge_e2e.py  smoke_knowledge_stores.py  smoke_mineru.py
backend_mger/tests/: test_husbandry_workflow.py  test_knowledge_pipeline.py  test_security.py  test_users_management.py
frontend/: README.md  (+5 more)
(+92 files in other folders)
