[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43.40",
    "cryptography>=46.0.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "langgraph>=1.0",
    "neo4j>=6.0",
    "opensearch-py>=3.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.7.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.16",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
