[project]
name = "canw-admin-backend"
version = "0.1.0"
description = "CanW administrator API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
