[project]
name = "canw-admin-backend"
version = "0.1.0"
description = "CanW administrator API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43",
    "celery[redis]>=5.6",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=3.0",
    "neo4j>=6.0",
    "opensearch-py>=3.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.16",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
